Fixed details marker on firefox.

--- a/components/common.css
+++ b/components/common.css
@@ -106,6 +106,7 @@ details {
 }
 
 details summary {
+  list-style: none;
   position: relative;
   padding-left: 24px;
   padding-top: 15px;
@@ -119,7 +120,7 @@ details summary+*{
   padding-bottom: 16px;
 }
 details summary::-webkit-details-marker {
-  display: none;
+  display:none;
 }
 details summary:after {
   content: '';
